<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/title_screen" >

    <Button
        android:id="@+id/load_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/delete_save_button"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="50dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/load_game"
        android:textSize="40sp"
        android:onClick="loadGame" />

    <Button
        android:id="@+id/new_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/load_game_button"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="newGame"
        android:text="@string/new_game"
        android:textSize="40sp" />

    <Button
        android:id="@id/delete_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="50dp"
        android:background="?android:attr/selectableItemBackground"
        android:onClick="deleteSave"
        android:text="@string/delete_save"
        android:textSize="40sp" />

</RelativeLayout>