<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/felt_background"
    tools:context="edu.ramapo.csnyder2.BuildUp.DetermineFirstPlayer" >

    <TableLayout
        android:id="@+id/game_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingEnd="10sp"
        android:paddingLeft="10sp"
        android:paddingStart="10sp"
        android:paddingTop="10sp" >

        <TableRow
            android:id="@+id/row_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/human_score_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:text="@string/human_score_text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/human_score_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/human_score_value"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/row_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp" >

            <TextView
                android:id="@+id/cpu_score_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:text="@string/cpu_score_text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cpu_score_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cpu_score_value"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/row_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp" >

            <TextView
                android:id="@+id/human_wins_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:text="@string/human_wins_text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/human_wins_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/human_wins_value"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/row_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp" >

            <TextView
                android:id="@+id/cpu_wins_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10sp"
                android:layout_marginRight="10sp"
                android:text="@string/cpu_wins_text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cpu_wins_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cpu_wins_value"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/row_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp" >

            <TextView
                android:id="@+id/human_color_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20sp"
                android:layout_marginRight="20sp"
                android:text="@string/human_color_image_desc"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/human_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/human_color"
                android:contentDescription="@string/human_color_image_desc" />
        </TableRow>

        <TableRow
            android:id="@+id/row_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp" >

            <TextView
                android:id="@+id/cpu_color_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20sp"
                android:layout_marginRight="20sp"
                android:text="@string/cpu_color_image_desc"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/cpu_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cpu_color"
                android:contentDescription="@string/cpu_color_image_desc" />
        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:id="@+id/board_stacks_human"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="20sp" >

        <Button
            android:id="@+id/board_B1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp"
            android:background="@drawable/b00" />

        <Button
            android:id="@+id/board_B2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp"
            android:layout_toEndOf="@id/board_B1"
            android:layout_toRightOf="@id/board_B1"
            android:background="@drawable/b00" />

        <Button
            android:id="@+id/board_B3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp"
            android:layout_toEndOf="@id/board_B2"
            android:layout_toRightOf="@id/board_B2"
            android:background="@drawable/b00" />

        <Button
            android:id="@+id/board_B4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp"
            android:layout_toEndOf="@id/board_B3"
            android:layout_toRightOf="@id/board_B3"
            android:background="@drawable/b00" />

        <Button
            android:id="@+id/board_B5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp"
            android:layout_toEndOf="@id/board_B4"
            android:layout_toRightOf="@id/board_B4"
            android:background="@drawable/b00" />

        <Button
            android:id="@+id/board_B6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/board_B5"
            android:layout_toRightOf="@id/board_B5"
            android:background="@drawable/b00" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/board_stacks_cpu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/board_stacks_human"
        android:layout_centerHorizontal="true"
        android:paddingBottom="20sp"
        android:paddingTop="20sp" >

        <Button
            android:id="@+id/board_W1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp"
            android:background="@drawable/b00" />

        <Button
            android:id="@+id/board_W2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp"
            android:layout_toEndOf="@id/board_W1"
            android:layout_toRightOf="@id/board_W1"
            android:background="@drawable/b00" />

        <Button
            android:id="@+id/board_W3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp"
            android:layout_toEndOf="@id/board_W2"
            android:layout_toRightOf="@id/board_W2"
            android:background="@drawable/b00" />

        <Button
            android:id="@+id/board_W4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp"
            android:layout_toEndOf="@id/board_W3"
            android:layout_toRightOf="@id/board_W3"
            android:background="@drawable/b00" />

        <Button
            android:id="@+id/board_W5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp"
            android:layout_toEndOf="@id/board_W4"
            android:layout_toRightOf="@id/board_W4"
            android:background="@drawable/b00" />

        <Button
            android:id="@+id/board_W6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/board_W5"
            android:layout_toRightOf="@id/board_W5"
            android:background="@drawable/b00" />
    </RelativeLayout>

    <TextView
        android:id="@+id/draw_result_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/board_stacks_cpu"
        android:layout_centerHorizontal="true"
        android:textSize="32sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/drawn_tiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/draw_result_message"
        android:layout_centerHorizontal="true"
        android:paddingTop="20sp" >

        <Button
            android:id="@+id/human_tile_drawn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30sp"
            android:layout_marginRight="30sp"
            android:background="@drawable/b00"
            android:visibility="gone" />

        <Button
            android:id="@+id/cpu_tile_drawn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/human_tile_drawn"
            android:layout_toRightOf="@id/human_tile_drawn"
            android:background="@drawable/b00"
            android:visibility="gone" />
    </RelativeLayout>

    <Button
        android:id="@+id/draw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="displayDraw"
        android:text="@string/draw"
        android:textSize="50sp" />

    <Button
        android:id="@+id/continue_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="continueGame"
        android:text="@string/continue_game"
        android:textSize="50sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/redraw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="drawAgain"
        android:text="@string/redraw"
        android:textSize="50sp"
        android:visibility="gone" />

</RelativeLayout>